# 4DOF_ARM

./: .gitignore  CMakeLists.txt  README.md  can_init.sh
src/: CMakeLists.txt
src/Dependencies/EKF/: CMakeLists.txt
src/Dependencies/EKF/ball_localization/: CMakeLists.txt
src/Dependencies/driver/: CMakeLists.txt
src/Dependencies/driver/Myactuator/: CMakeLists.txt
src/Dependencies/driver/Myactuator/include/myactuator_rmd/: motorInfo.hpp
src/Dependencies/driver/Myactuator/include/myactuator_rmd/protocol/: address_offset.hpp  command_type.hpp  node.hpp
src/Dependencies/driver/Myactuator/src/: driver.cpp
src/Dependencies/driver/Myactuator/src/can/: node.cpp
src/FSM/: CMakeLists.txt
src/FSM/include/: FSM.hpp  FSM_body.hpp  FSM_states.hpp  FSM_utilities.hpp
src/FSM/include/fsm/: FSM_states.hpp
src/FSM/src/: FSM.cc
src/driver/Myactuator/: CMakeLists.txt
src/driver/Myactuator/include/myactuator_rmd/: actuateMotor.hpp  driver.hpp  motorInfo.hpp  positioncontrol.hpp
src/driver/Myactuator/include/myactuator_rmd/can/: exceptions.hpp  node.hpp
src/driver/Myactuator/include/myactuator_rmd/protocol/: command_type.hpp  node.hpp  requests.hpp  responses.hpp
src/driver/Myactuator/src/: driver.cpp  positioncontrol.cc
src/driver/Myactuator/src/can/: node.cpp
src/robot/: CMakeLists.txt
src/robot/include/: robot_COMMON.h  robot_IK.h  robot_body.hpp  robot_builder.hpp  robot_positionController.hpp  robot_pub.hpp  robot_state.hpp
src/robot/include/controller/: robot_gravityComensation.hpp  robot_positionController.hpp
src/robot/include/memory/: SHM.hpp
src/robot/include/stuffs/: motor.hpp  pid_error.hpp  timer.hpp
src/robot/src/: dump  robot_body.cc  robot_builder.cc  robot_impedenceController.cc  robot_positionController.cc  robot_pub.cc
src/robot/src/controller/: robot_gravityCompensation.cc  robot_positionController.cc
src/run/: CMakeLists.txt
src/run/src/: PIDrun.cc  POSITIONrun.cc  test.cc
